[gd_scene load_steps=23 format=3 uid="uid://batr75htqatpe"]

[ext_resource type="Script" path="res://bitFolder/skely.gd" id="1_eq08h"]
[ext_resource type="Texture2D" uid="uid://btt0xdwvoevom" path="res://bitFolder/Assets/1bitDungeon/skeleton_enemy.png" id="2_2ap6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hyub"]
size = Vector2(29, 11)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_78wdl"]
radius = 8.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_elvds"]
atlas = ExtResource("2_2ap6p")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02dlp"]
atlas = ExtResource("2_2ap6p")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc8of"]
atlas = ExtResource("2_2ap6p")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqhfd"]
atlas = ExtResource("2_2ap6p")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iajy2"]
atlas = ExtResource("2_2ap6p")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nli6i"]
atlas = ExtResource("2_2ap6p")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_co5bb"]
atlas = ExtResource("2_2ap6p")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7my"]
atlas = ExtResource("2_2ap6p")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nr77"]
atlas = ExtResource("2_2ap6p")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bei6k"]
atlas = ExtResource("2_2ap6p")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlwmt"]
atlas = ExtResource("2_2ap6p")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1chj"]
atlas = ExtResource("2_2ap6p")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6ktp"]
atlas = ExtResource("2_2ap6p")
region = Rect2(384, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktloj"]
atlas = ExtResource("2_2ap6p")
region = Rect2(0, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5hjm"]
atlas = ExtResource("2_2ap6p")
region = Rect2(64, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_um2xw"]
atlas = ExtResource("2_2ap6p")
region = Rect2(128, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1dt8"]
atlas = ExtResource("2_2ap6p")
region = Rect2(192, 96, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpb0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elvds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02dlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc8of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqhfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iajy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nli6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co5bb")
}],
"loop": false,
"name": &"atk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nr77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bei6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlwmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1chj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6ktp")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktloj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5hjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um2xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1dt8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_co5bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nr77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bei6k")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
top_level = true
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_eq08h")

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_2hyub")
debug_color = Color(0.971659, 0, 0.446437, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_78wdl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_wpb0m")
animation = &"atk"
autoplay = "default"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
